apps/qbit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: WEBUI_PORT
              value: "8080"
            - name: TORRENTING_PORT
              value: "6881"
          image: lscr.io/linuxserver/qbittorrent:5.2.3_v2.0.15-ls478
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      dnsConfig:
        nameservers:
          - 127.0.0.1
      dnsPolicy: None
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbit-config-pvc
        - hostPath:
            path: /srv/media
          name: downloads
