apps/qbit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbit
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: qbittorrent
